--- a/files_for_lab/ANOVA.ipynb
+++ b/files_for_lab/ANOVA.ipynb
@@ -21,16 +21,276 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import libraries\n"
+    "# Import libraries\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import scipy.stats as sp\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>#</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Type 1</th>\n",
+       "      <th>Type 2</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>HP</th>\n",
+       "      <th>Attack</th>\n",
+       "      <th>Defense</th>\n",
+       "      <th>Sp. Atk</th>\n",
+       "      <th>Sp. Def</th>\n",
+       "      <th>Speed</th>\n",
+       "      <th>Generation</th>\n",
+       "      <th>Legendary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Bulbasaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>318</td>\n",
+       "      <td>45</td>\n",
+       "      <td>49</td>\n",
+       "      <td>49</td>\n",
+       "      <td>65</td>\n",
+       "      <td>65</td>\n",
+       "      <td>45</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Ivysaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>405</td>\n",
+       "      <td>60</td>\n",
+       "      <td>62</td>\n",
+       "      <td>63</td>\n",
+       "      <td>80</td>\n",
+       "      <td>80</td>\n",
+       "      <td>60</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Venusaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>525</td>\n",
+       "      <td>80</td>\n",
+       "      <td>82</td>\n",
+       "      <td>83</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>VenusaurMega Venusaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>625</td>\n",
+       "      <td>80</td>\n",
+       "      <td>100</td>\n",
+       "      <td>123</td>\n",
+       "      <td>122</td>\n",
+       "      <td>120</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Charmander</td>\n",
+       "      <td>Fire</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>309</td>\n",
+       "      <td>39</td>\n",
+       "      <td>52</td>\n",
+       "      <td>43</td>\n",
+       "      <td>60</td>\n",
+       "      <td>50</td>\n",
+       "      <td>65</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>795</th>\n",
+       "      <td>719</td>\n",
+       "      <td>Diancie</td>\n",
+       "      <td>Rock</td>\n",
+       "      <td>Fairy</td>\n",
+       "      <td>600</td>\n",
+       "      <td>50</td>\n",
+       "      <td>100</td>\n",
+       "      <td>150</td>\n",
+       "      <td>100</td>\n",
+       "      <td>150</td>\n",
+       "      <td>50</td>\n",
+       "      <td>6</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>796</th>\n",
+       "      <td>719</td>\n",
+       "      <td>DiancieMega Diancie</td>\n",
+       "      <td>Rock</td>\n",
+       "      <td>Fairy</td>\n",
+       "      <td>700</td>\n",
+       "      <td>50</td>\n",
+       "      <td>160</td>\n",
+       "      <td>110</td>\n",
+       "      <td>160</td>\n",
+       "      <td>110</td>\n",
+       "      <td>110</td>\n",
+       "      <td>6</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>797</th>\n",
+       "      <td>720</td>\n",
+       "      <td>HoopaHoopa Confined</td>\n",
+       "      <td>Psychic</td>\n",
+       "      <td>Ghost</td>\n",
+       "      <td>600</td>\n",
+       "      <td>80</td>\n",
+       "      <td>110</td>\n",
+       "      <td>60</td>\n",
+       "      <td>150</td>\n",
+       "      <td>130</td>\n",
+       "      <td>70</td>\n",
+       "      <td>6</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>798</th>\n",
+       "      <td>720</td>\n",
+       "      <td>HoopaHoopa Unbound</td>\n",
+       "      <td>Psychic</td>\n",
+       "      <td>Dark</td>\n",
+       "      <td>680</td>\n",
+       "      <td>80</td>\n",
+       "      <td>160</td>\n",
+       "      <td>60</td>\n",
+       "      <td>170</td>\n",
+       "      <td>130</td>\n",
+       "      <td>80</td>\n",
+       "      <td>6</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>799</th>\n",
+       "      <td>721</td>\n",
+       "      <td>Volcanion</td>\n",
+       "      <td>Fire</td>\n",
+       "      <td>Water</td>\n",
+       "      <td>600</td>\n",
+       "      <td>80</td>\n",
+       "      <td>110</td>\n",
+       "      <td>120</td>\n",
+       "      <td>130</td>\n",
+       "      <td>90</td>\n",
+       "      <td>70</td>\n",
+       "      <td>6</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>800 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       #                   Name   Type 1  Type 2  Total  HP  Attack  Defense  \\\n",
+       "0      1              Bulbasaur    Grass  Poison    318  45      49       49   \n",
+       "1      2                Ivysaur    Grass  Poison    405  60      62       63   \n",
+       "2      3               Venusaur    Grass  Poison    525  80      82       83   \n",
+       "3      3  VenusaurMega Venusaur    Grass  Poison    625  80     100      123   \n",
+       "4      4             Charmander     Fire     NaN    309  39      52       43   \n",
+       "..   ...                    ...      ...     ...    ...  ..     ...      ...   \n",
+       "795  719                Diancie     Rock   Fairy    600  50     100      150   \n",
+       "796  719    DiancieMega Diancie     Rock   Fairy    700  50     160      110   \n",
+       "797  720    HoopaHoopa Confined  Psychic   Ghost    600  80     110       60   \n",
+       "798  720     HoopaHoopa Unbound  Psychic    Dark    680  80     160       60   \n",
+       "799  721              Volcanion     Fire   Water    600  80     110      120   \n",
+       "\n",
+       "     Sp. Atk  Sp. Def  Speed  Generation  Legendary  \n",
+       "0         65       65     45           1      False  \n",
+       "1         80       80     60           1      False  \n",
+       "2        100      100     80           1      False  \n",
+       "3        122      120     80           1      False  \n",
+       "4         60       50     65           1      False  \n",
+       "..       ...      ...    ...         ...        ...  \n",
+       "795      100      150     50           6       True  \n",
+       "796      160      110    110           6       True  \n",
+       "797      150      130     70           6       True  \n",
+       "798      170      130     80           6       True  \n",
+       "799      130       90     70           6       True  \n",
+       "\n",
+       "[800 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Load the data:\n"
+    "# Load the data:\n",
+    "poke = pd.read_csv('pokemon.txt', sep = ',')\n",
+    "poke"
    ]
   },
   {
@@ -57,14 +317,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array(['Grass', 'Fire', 'Water', 'Bug', 'Normal', 'Poison', 'Electric',\n",
+       "        'Ground', 'Fairy', 'Fighting', 'Psychic', 'Rock', 'Ghost', 'Ice',\n",
+       "        'Dragon', 'Dark', 'Steel', 'Flying'], dtype=object),\n",
+       " array(['Poison', nan, 'Flying', 'Dragon', 'Ground', 'Fairy', 'Grass',\n",
+       "        'Fighting', 'Psychic', 'Steel', 'Ice', 'Rock', 'Dark', 'Water',\n",
+       "        'Electric', 'Fire', 'Ghost', 'Bug', 'Normal'], dtype=object))"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here\n",
+    "# the unique values\n",
+    "type_1 = poke['Type 1'].unique()\n",
+    "type_2 = poke['Type 2'].unique()\n",
+    "type_1 ,type_2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type_from_1 = []\n",
+    "for typ in type_1:\n",
+    "    type_from_1.append((poke[poke['Type 1'] == typ]['Type 1']).value_counts().sum())\n",
     "\n",
+    "type_from_2 = []\n",
+    "for typ in type_2:\n",
+    "    type_from_2.append((poke[poke['Type 2'] == typ]['Type 2']).value_counts().sum())\n",
     "\n",
+    "unique_types_1 = type_from_1 + type_from_2\n",
+    "unique_types_2 = (*type_from_1, *type_from_2)\n",
+    "\n",
+    "unique_type = list(dict.fromkeys(np.concatenate((poke['Type 1'].unique(), poke['Type 2'].unique()), axis= 0 )))\n",
+    "\n",
+    "len(unique_type)\n",
+    "\n",
+    "# for c in data.columns.tolist():         # know the unique values for each column\n",
+    "#     print(c, len(data[c].unique()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "iterable unpacking cannot be used in comprehension (905968842.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\Emmanuel\\AppData\\Local\\Temp\\ipykernel_27936\\905968842.py\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    statistic, pvalue = sp.f_oneway(*unique_types_2[x] for x in range(len(unique_types_2)))\u001b[0m\n\u001b[1;37m                                    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m iterable unpacking cannot be used in comprehension\n"
+     ]
+    }
+   ],
+   "source": [
+    "# statistic, pvalue = sp.f_oneway(type_from_1, type_from_2)\n",
+    "# statistic, pvalue = sp.f_oneway(*unique_types_2[x] for x in range(len(unique_types_2)))\n",
     "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "H0 = all the type have the same \"value\", we cannot really talk about mean when talking about power type ine pokemom\n",
+    "\n",
+    "H1 = the type are different\n",
+    "\n",
+    "as the p value is significantly lower than the 0.05 , we have the H0 rejected !!!! "
    ]
   },
   {
@@ -84,11 +429,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "pokemon_totals = [] \n",
+    "\n",
+    "for p in unique_type:\n",
+    "    if isinstance(p, str):\n",
+    "        pokemon_totals.append(poke[(poke['Type 1'] == p) | (poke['Type 2'] == p)]['Total'])\n",
+    "\n",
+    "len(pokemon_totals)"
    ]
   },
   {
@@ -106,11 +469,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "F_onewayResult(statistic=6.6175382960055344, pvalue=2.6457458815984803e-15)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "sp.f_oneway(*pokemon_totals)"
    ]
   },
   {
@@ -126,7 +501,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your comment here\n"
+    "# Your comment here\n",
+    "# H0 = totals of all the type of pokemons are equal to each other\n",
+    "# H1 = the totals of all the type are NOT equal to each other \n",
+    "# significance level is 0.05\n",
+    "# Dof = len(pokemon_totals -1) =18\n",
+    "# We can see that the pvalue is very low , well under the significence level there fore we reject the H0 hypothesis "
    ]
   },
   {
@@ -146,7 +526,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -160,7 +540,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "3b3bd93e6e993b5a0362fec8f7339ef1ba3066e57f882c75a84b879c84a67f0f"
+   }
   }
  },
  "nbformat": 4,
